--- a/achievements.html
+++ b/achievements.html
@@ -85,9 +85,11 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>
-            </div>
-          </div>
-      </div>
+  </div>
   </body>
+  <footer class="page-footer font-small footer-dark">
+    <div class="footer-dark text-center py-3">© 2020 Copyright:
+      <a href="https://github.com/dgfonseca"> Github</a>
+    </div>
+  </footer>
 </html>
