--- a/home.html
+++ b/home.html
@@ -31,6 +31,10 @@
             <div class="col">
               <div id="nombre">
                 <h1> Hi, my name is David Guillermo Fonseca Ramirez</h1>
+                <audio controls>
+                  <source src="/images/audio.ogg" type="audio/ogg">
+                  <source src="/images/audio.mp4" type="audio/mpeg">
+                </audio>
               </div>              
               <span class="paragraph">
                 <p>
